kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-deployment
  namespace: dev
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: microtodo
  template:
    metadata: 
      labels:
        app: microtodo
    spec:
      containers:
      - name: microtodo-container
        image: IMAGE_PLACEHOLDER
        ports:
        - containerPort: 80 

        volumeMounts:
        - name: microtodo-volume
          mountPath: /usr/share/nginx/html

      volumes:
        - name: microtodo-volume
          persistentVolumeClaim:
            claimName: microtodo-pvc
