kubernetes/service.yml
  apiVersion: v1
  kind: Service
  metadata:
    name: dev-service
    namespace: dev
  spec:
    selector:
      app: microtodo
    ports:
    - name: http-nginx
      port: 7777
      targetPort: 80
    type: ClusterIP
