kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: dev-ingress
  namespace: dev
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: azure-application-gateway

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-service
                port:
                  number: 80
